--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.8.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
