--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
     "firebase": "^10.10.0",
     "formidable": "^3.5.1",
     "framer-motion": "^4.1.17",
@@ -69,6 +70,7 @@
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/formidable": "^3.4.5",
     "@types/node": "20.11.24",
     "@types/react": "18.2.63",
