--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-intersection-observer": "^9.8.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "react-zoom-pan-pinch": "^3.6.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
